src/test/ui/bounds-lifetime.stderr
error: lifetime bounds cannot be used in this context
  --> $DIR/bounds-lifetime.rs:1:22
   |
LL | type A = for<'b, 'a: 'b> fn();
   |                      ^^

error: lifetime bounds cannot be used in this context
  --> $DIR/bounds-lifetime.rs:2:22
   |
LL | type B = for<'b, 'a: 'b,> fn();
   |                      ^^

error: lifetime bounds cannot be used in this context
  --> $DIR/bounds-lifetime.rs:3:22
   |
LL | type C = for<'b, 'a: 'b +> fn();
   |                      ^^

error: only lifetime parameters can be used in this context
  --> $DIR/bounds-lifetime.rs:4:18
   |
LL | type D = for<'a, T> fn();
   |                  ^

error: only lifetime parameters can be used in this context
  --> $DIR/bounds-lifetime.rs:5:18
   |
LL | type E = dyn for<T> Fn();
   |                  ^

warning: lifetime parameter `'a` never used
  --> $DIR/bounds-lifetime.rs:1:18
   |
LL | type A = for<'b, 'a: 'b> fn();
   |                  ^^
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/bounds-lifetime.rs:2:18
   |
LL | type B = for<'b, 'a: 'b,> fn();
   |                  ^^

warning: lifetime parameter `'a` never used
  --> $DIR/bounds-lifetime.rs:3:18
   |
LL | type C = for<'b, 'a: 'b +> fn();
   |                  ^^

warning: lifetime parameter `'a` never used
  --> $DIR/bounds-lifetime.rs:4:14
   |
LL | type D = for<'a, T> fn();
   |              ^^

error: aborting due to 5 previous errors

